Fix discount code form alignment on the cart page.

--- a/cartridge/shop/static/css/cartridge.css
+++ b/cartridge/shop/static/css/cartridge.css
@@ -34,6 +34,8 @@
 .form-cart .form-actions-wrap {float:right; margin-right:5px;}
 .order-history .btn {float:right; margin:0 0 0 5px;}
 .btn-order-history {float:right; margin:-75px 20px 0 0;}
+.discount-form {float:right;}
+.discount-form .btn {float:right; margin:-5px 7px 0 0;}
 
 /* Wishlist */
 .wishlist img {vertical-align:middle; margin-right:5px;}
